--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Test</title>
-        <script type="text/javascript" src="/js/nameChecker.js"></script>
-        <script type="text/javascript" src="/js/formHandler.js"></script>
+        <!-- even this reference will be deleted in the near future -->
+        <script type="text/javascript" src="../../../dist/main.js"></script>
+        <!--<script type="text/javascript" src="/js/nameChecker.js"></script>-->
+        <!--<script type="text/javascript" src="/js/formHandler.js"></script>-->
         <link rel="stylesheet" href="/styles/resets.css">
         <link rel="stylesheet" href="/styles/base.css">
         <link rel="stylesheet" href="/styles/header.css">
